Nonsecured routes test classes impl. User and Critique jdbc repository test class impl. Errors while testing fix